Cleanup divs and fix spacing under buttons

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,18 +5,11 @@ body {
 }
 
 #outer-container {
-    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-#container {
-    min-width: 200px;
-    min-height: 200px;
-    width: 100%;
-    height: 80%;
+    height: 100vh;
 }
 
 #compliment-container {
@@ -51,17 +44,14 @@ body {
     animation-duration: 1s;
 }
 
-#button-container-wrap {
-    min-width: 300px;
-    width: 100%;
-    position: absolute;
-    bottom: 2vh;
-    height: 10vh;
-}
-
 #button-container {
     width: 70%;
+    min-width: 300px;
+    height: 10vh;
+    min-height: 100px;
     margin: auto;
+    position: absolute;
+    bottom: 2vh;
 }
 
 button {
